--- a/FedElxnTwitter.ipynb
+++ b/FedElxnTwitter.ipynb
@@ -279,10 +279,10 @@
     "%matplotlib inline\n",
     "pd.set_option('display.float_format', lambda x: '%.1f' % x)\n",
     "\n",
-    "\n",
-    "db_login = dict(host = '104.196.210.223',\n",
-    "        database = '2019election_twitterbot',\n",
-    "        user = os.environ['db_name'],\n",
+    "# Login from using environment variables\n",
+    "db_login = dict(host = os.environ['db_host'],\n",
+    "        database = os.environ['db_name'],\n",
+    "        user = os.environ['db_user'],\n",
     "        password = os.environ['db_pass'])\n",
     "\n",
     "db = MySQLdb.connect(**db_login)\n",
